# pLSM-etching

./: .gitignore  CMakeLists.txt  CMakeLists_linux.txt  Implicit.ipynb  README.md  cell_cuts.py  conanfile.txt  copyfile.sh  exp.py  exp_implicit.py  exp_implicit_taichi.py  exp_taichi.py  experiment.ipynb  experiment_implicit.ipynb  ils.ipynb  levelset.ipynb  main.cpp  mesh_demo.py  narrowband.ipynb  out.txt  readfile.py  run.sh  run_linux.sh  tempCodeRunnerFile.sh
application/: LevelsetSolver.C  createFields.H
application/Make/: files  options
application/Make/darwin64ClangDPInt32Opt/: LevelsetSolver.C.dep  options  sourceFiles  variables
data/: Silicon_etch_result.bnd  initial_struct.bnd  initial_struct_test.mtl
notebook/: Implicit.ipynb  check.ipynb  checkwatertight.ipynb  compare.ipynb  exp.ipynb  experiment_implicit.ipynb  ils.ipynb  levelset.ipynb  narrowband.ipynb
python/: cell_cuts.py  check.py  checking_exp.py  checking_initial.py  exp_implicit_taichi.py  exp_taichi.py  mesh_demo.py  readfile.py  tempCodeRunnerFile.py
run/0/: U  backup_phi  phi
run/1/: phi
run/constant/: etchProperties  etchingProperties  transportProperties
run/constant/extendedFeatureEdgeMesh/: initial_struct.extendedFeatureEdgeMesh
run/constant/polyMesh/: boundary  cellLevel  level0Edge  pointLevel  surfaceIndex
run/constant/triSurface/: initial_struct.eMesh
run/system/: blockMeshDict  controlDict  fvSchemes  fvSolution  setFieldsDict  snappyHexMeshDict  surfaceFeatureExtractDict
src/: CacheOblivious.cpp  CacheOblivious_main.cpp  DFISEParser.cpp  DFISEParser.hpp  LevelSetMethod.cpp  LevelSetMethod.hpp  LevelSetMethodCacheOblivious.cpp  LevelSetMethodCacheOblivious.hpp  OBJToBNDConverter.hpp  OpenVDBLevelSet.cpp  OpenVDBLevelSet.hpp  README.md  README_CACHE_OBLIVIOUS.md  TimeScheme.hpp  alphawrap.cpp  convert.hpp  extract_materials.cpp  implicitLUSGS.hpp  levelset_main.cpp  main.cpp
test/: DFISEParser.hpp  OBJToBNDConverter.hpp  a.out  alphawrap.hpp  convert.hpp  output_helper.h  test.cpp
